--- a/src/index.css
+++ b/src/index.css
@@ -12,12 +12,14 @@
   --white: #FFFFFF;
   --frontEnd: #6BD1FF;
   --backEnd: #00C86F;
+  --backgroundColor: #141414;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--backgroundColor);
 }
 
 a {
