--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,16 +1,17 @@
 .Logo {
-    max-width: 168px;
+    max-width: 180px;
+    margin-top: 8px;
   }
 
   @media (max-width: 800px) {
     .Logo {
-      max-width: 105px;
+      max-width: 120px;
     }
   }
 
   .Menu {
     width: 100%;
-    height: 94px;
+    height: 80px;
     z-index: 100;
 
     display: flex;
@@ -33,7 +34,7 @@
   }
   @media (max-width: 800px) {
     .Menu {
-      height: 40px;
+      height: 50px;
       justify-content: center;
     }
     body {
@@ -56,6 +57,7 @@
     text-decoration: none;
     display: inline-block;
     transition: opacity .3s;
+    margin-left: 10px;
   }
   .ButtonLink:hover,
   .ButtonLink:focus {
@@ -64,13 +66,24 @@
 
   @media (max-width: 800px) {
     a.ButtonLink {
-      position: fixed;
-      left: 0;
-      right: 0;
-      bottom: 0;
       background: var(--primary);
       border-radius: 0;
       border: 0;
       text-align: center;
+      width: 100%;
+      margin-left: 3px;
+    }
+
+    a.ButtonLink:first-child {
+      display: none;
+    }
+
+    .Actions {
+      position: fixed;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      display: flex;
+      justify-content: space-between;
     }
   }
